--- a/Source/Net.Daczkowski.Emineo.Tests/Net.Daczkowski.Emineo.Tests.csproj
+++ b/Source/Net.Daczkowski.Emineo.Tests/Net.Daczkowski.Emineo.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7E9DFEF2-EA82-4273-8F5D-BAAAF12E748C}</ProjectGuid>
+    <ProjectGuid>{495DF45B-5A39-4F43-B1D6-E4892876C087}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Net.Daczkowski.Emineo.Model</RootNamespace>
-    <AssemblyName>Net.Daczkowski.Emineo.Model</AssemblyName>
+    <RootNamespace>Net.Daczkowski.Emineo.Tests</RootNamespace>
+    <AssemblyName>Net.Daczkowski.Emineo.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\..\Components\Moq\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Components\NUnit\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -38,20 +45,16 @@
     <Compile Include="..\ProductAssemblyInfo.cs">
       <Link>Properties\ProductAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Entity.cs" />
-    <Compile Include="Specifications\TaskSpecification.cs" />
-    <Compile Include="Visitors\IHaveEstimate.cs" />
-    <Compile Include="Progress.cs" />
-    <Compile Include="Visitors\IHaveRegisteredWork.cs" />
-    <Compile Include="Place.cs" />
-    <Compile Include="Project.cs" />
-    <Compile Include="RegisteredWork.cs" />
-    <Compile Include="Task.cs" />
+    <Compile Include="GivenProjectWithATask.cs" />
+    <Compile Include="GivenProjectWithSubtasks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="Visitors\IVisitor.cs" />
-    <Compile Include="Visitors\TasksFlatteningVisitor.cs" />
-    <Compile Include="Visitors\WorkProgressVisitor.cs" />
+    <Compile Include="GivenEmptyProject.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Net.Daczkowski.Emineo.Model\Net.Daczkowski.Emineo.Model.csproj">
+      <Project>{7E9DFEF2-EA82-4273-8F5D-BAAAF12E748C}</Project>
+      <Name>Net.Daczkowski.Emineo.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Settings.StyleCop">
