--- a/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
+++ b/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
@@ -58,6 +58,13 @@
       <Link>Properties\Settings.StyleCop</Link>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Progress.hbm.xml" />
+    <EmbeddedResource Include="Project.hbm.xml" />
+    <EmbeddedResource Include="RegisteredWork.hbm.xml" />
+    <EmbeddedResource Include="Task.hbm.xml" />
+    <EmbeddedResource Include="User.hbm.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
