--- a/Source/Net.Daczkowski.Emineo.Tests/Net.Daczkowski.Emineo.Tests.csproj
+++ b/Source/Net.Daczkowski.Emineo.Tests/Net.Daczkowski.Emineo.Tests.csproj
@@ -31,8 +31,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime">
+      <HintPath>..\..\Components\NHibernate\Antlr3.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="HibernatingRhinos.Profiler.Appender.v4.0">
+      <HintPath>..\..\Components\NHProf\HibernatingRhinos.Profiler.Appender.v4.0.dll</HintPath>
+    </Reference>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\..\Components\NHibernate\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="LinFu.DynamicProxy">
+      <HintPath>..\..\Components\NHibernate\LazyLoading\LinFu.DynamicProxy.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\..\Components\NHibernate\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Moq">
       <HintPath>..\..\Components\Moq\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\..\Components\NHibernate\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.ByteCode.LinFu">
+      <HintPath>..\..\Components\NHibernate\LazyLoading\NHibernate.ByteCode.LinFu.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -40,15 +61,17 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\ProductAssemblyInfo.cs">
       <Link>Properties\ProductAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="GivenProjectWithATask.cs" />
-    <Compile Include="GivenProjectWithSubtasks.cs" />
+    <Compile Include="Demo\Example1_PersistingProject.cs" />
+    <Compile Include="Spec\GivenProjectWithATask.cs" />
+    <Compile Include="Spec\GivenProjectWithSubtasks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GivenEmptyProject.cs" />
+    <Compile Include="Spec\GivenEmptyProject.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Net.Daczkowski.Emineo.Model\Net.Daczkowski.Emineo.Model.csproj">
@@ -60,6 +83,11 @@
     <None Include="..\Settings.StyleCop">
       <Link>Properties\Settings.StyleCop</Link>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="NHibernate.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
