--- a/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
+++ b/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
@@ -40,6 +40,7 @@
     </Compile>
     <Compile Include="Entity.cs" />
     <Compile Include="Specifications\TaskSpecification.cs" />
+    <Compile Include="TaskContainer.cs" />
     <Compile Include="Visitors\IHaveEstimate.cs" />
     <Compile Include="Progress.cs" />
     <Compile Include="Visitors\IHaveRegisteredWork.cs" />
@@ -60,10 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Progress.hbm.xml" />
-    <EmbeddedResource Include="Project.hbm.xml" />
     <EmbeddedResource Include="RegisteredWork.hbm.xml" />
-    <EmbeddedResource Include="Task.hbm.xml" />
     <EmbeddedResource Include="User.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TaskContainer.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
