--- a/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
+++ b/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Entity.cs" />
     <Compile Include="Specifications\TaskSpecification.cs" />
     <Compile Include="TaskContainer.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="Visitors\IHaveEstimate.cs" />
     <Compile Include="Progress.cs" />
     <Compile Include="Visitors\IHaveRegisteredWork.cs" />
@@ -65,6 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="TaskContainer.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Test.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
