--- a/Source/Net.Daczkowski.Emineo.Tests/Net.Daczkowski.Emineo.Tests.csproj
+++ b/Source/Net.Daczkowski.Emineo.Tests/Net.Daczkowski.Emineo.Tests.csproj
@@ -61,13 +61,17 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\ProductAssemblyInfo.cs">
       <Link>Properties\ProductAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Demo\Example4_Cache.cs" />
+    <Compile Include="Demo\Example3_BatchLoad.cs" />
     <Compile Include="Demo\Example1_PersistingProject.cs" />
+    <Compile Include="Demo\Example2_Queries.cs" />
     <Compile Include="Spec\GivenProjectWithATask.cs" />
     <Compile Include="Spec\GivenProjectWithSubtasks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
