--- a/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
+++ b/Source/Net.Daczkowski.Emineo.Model/Net.Daczkowski.Emineo.Model.csproj
@@ -61,14 +61,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="RegisteredWork.hbm.xml" />
-    <EmbeddedResource Include="User.hbm.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="TaskContainer.hbm.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Test.hbm.xml" />
+    <EmbeddedResource Include="Test.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
