--- a/Source/Net.Daczkowski.Emineo.App/Net.Daczkowski.Emineo.App.csproj
+++ b/Source/Net.Daczkowski.Emineo.App/Net.Daczkowski.Emineo.App.csproj
@@ -66,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PersistingProject.cs" />
-    <Compile Include="PersistingUser.cs" />
+    <Compile Include="UserQueries.cs" />
     <Compile Include="Queries.cs" />
     <Compile Include="BatchLoad.cs" />
     <Compile Include="Cache.cs" />
