--- a/Source/Net.Daczkowski.Emineo.App/Net.Daczkowski.Emineo.App.csproj
+++ b/Source/Net.Daczkowski.Emineo.App/Net.Daczkowski.Emineo.App.csproj
@@ -56,6 +56,9 @@
     <Reference Include="NHibernate.ByteCode.LinFu">
       <HintPath>..\..\Components\NHibernate\LazyLoading\NHibernate.ByteCode.LinFu.dll</HintPath>
     </Reference>
+    <Reference Include="NHibernate.LambdaExtensions">
+      <HintPath>..\..\Components\NHibernate\LambdaExtensions\NHibernate.LambdaExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
