--- a/Source/Net.Daczkowski.Emineo.App/Net.Daczkowski.Emineo.App.csproj
+++ b/Source/Net.Daczkowski.Emineo.App/Net.Daczkowski.Emineo.App.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Antlr3.Runtime">
       <HintPath>..\..\Components\NHibernate\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\..\Components\NHibernate\Fluent\FluentNHibernate.dll</HintPath>
+    </Reference>
     <Reference Include="HibernatingRhinos.Profiler.Appender.v4.0">
       <HintPath>..\..\Components\NHProf\HibernatingRhinos.Profiler.Appender.v4.0.dll</HintPath>
     </Reference>
